feat: get mdx message

--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -137,4 +137,22 @@
       }
     }
   }
+
+  .prose-chat {
+    > * {
+      &:first-child {
+        @apply mt-0;
+      }
+
+      &:last-child {
+        @apply mb-0;
+      }
+    }
+
+    @apply prose-doc;
+
+    :not(pre) > code {
+      @apply bg-gray-new-90 dark:bg-gray-new-15;
+    }
+  }
 }
