--- a/src/styles/doc-content.css
+++ b/src/styles/doc-content.css
@@ -9,8 +9,8 @@
     }
   }
   .prose-doc {
-    @apply max-w-none leading-normal text-black dark:text-gray-new-90;
-    @apply prose-headings:leading-tight prose-p:my-3 prose-p:leading-normal;
+    @apply max-w-none leading-normal text-black-new dark:text-gray-new-90;
+    @apply prose-headings:leading-tight prose-headings:text-black-new prose-p:my-3 prose-p:leading-normal;
     @apply prose-a:border-b prose-a:border-transparent prose-a:font-normal prose-a:text-secondary-8 prose-a:no-underline prose-a:transition-[border-color] prose-a:duration-200 prose-a:ease-in-out hover:prose-a:border-secondary-8 dark:prose-a:text-primary-1 dark:hover:prose-a:border-primary-1 prose-a:sm:break-words;
 
     h2 {
@@ -35,7 +35,7 @@
 
       > li {
         &::before {
-          @apply absolute -left-3.5 top-2.5 h-1 w-1 rounded-full bg-black content-[''] dark:bg-white md:-left-3;
+          @apply absolute -left-3.5 top-2.5 h-1 w-1 rounded-full bg-black-new content-[''] dark:bg-gray-new-90 md:-left-3;
         }
       }
     }
@@ -47,7 +47,7 @@
         @apply pl-1.5;
 
         &::marker {
-          @apply pl-1 text-black dark:text-white;
+          @apply pl-1 text-black-new dark:text-gray-new-90;
         }
       }
 
@@ -73,13 +73,13 @@
 
       thead {
         tr {
-          @apply border-b border-gray-5;
+          @apply border-b border-gray-new-70;
         }
       }
 
       tbody {
         tr {
-          @apply border-b border-gray-7 last:border-gray-5 dark:border-gray-2 dark:last:border-gray-5;
+          @apply border-b border-gray-new-90 last:border-gray-new-70 dark:border-gray-new-20 dark:last:border-gray-new-70;
         }
       }
     }
@@ -91,17 +91,17 @@
     }
 
     pre {
-      @apply my-5 !bg-gray-9 dark:!bg-gray-1;
+      @apply my-5 !bg-gray-new-98 dark:!bg-gray-new-15;
 
       code {
         text-shadow: unset;
 
-        @apply highlighted-code !font-mono text-sm !text-black dark:!text-white dark:![text-shadow:unset];
+        @apply highlighted-code !font-mono text-sm !text-black-new dark:!text-white dark:![text-shadow:unset];
       }
     }
 
     :not(pre) > code {
-      @apply !rounded-sm bg-gray-8 !px-1.5 !py-0.5 !font-mono !font-normal !text-black dark:bg-gray-2 dark:!text-white;
+      @apply !rounded-sm bg-gray-new-94 !px-1.5 !py-0.5 !font-mono !font-normal !text-black-new dark:bg-gray-new-20 dark:!text-white;
 
       &::before,
       &::after {
