--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -6,12 +6,7 @@
   }
 
   .DocSearch-Search-Icon {
-    display: none;
-    color: #fff;
-
-    @media (max-width: 768px) {
-      display: block;
-    }
+    @apply hidden;
   }
 
   .DocSearch-Button-Placeholder {
@@ -51,7 +46,7 @@
   background-color: rgba(94, 100, 112, 0.7);
 
   .DocSearch-Modal {
-    background: #f5f5f5;
+    @apply bg-white;
     border-radius: 6px;
     box-shadow: inset 1px 1px 0 0 hsla(0, 0%, 100%, 0.5), 0 3px 8px 0 #555a64;
     flex-direction: column;
@@ -61,25 +56,27 @@
   }
 
   .DocSearch-SearchBar {
-    display: flex;
-    padding: 12px 12px 0;
+    @apply flex border-b border-gray-new-90 px-2 py-2;
   }
 
   .DocSearch-Footer {
-    align-items: center;
-    background: none;
-    border-radius: 0 0 8px 8px;
-    box-shadow: none;
-    display: flex;
-    flex-direction: row-reverse;
-    flex-shrink: 0;
-    height: 44px;
-    justify-content: space-between;
-    padding: 0 12px;
-    position: relative;
-    user-select: none;
-    width: 100%;
-    z-index: 300;
+    @apply relative z-[300] flex h-11 w-full shrink-0 select-none flex-row-reverse items-center justify-between rounded-b-lg border-t border-gray-new-90 bg-none py-0 px-3 shadow-none;
+
+    .DocSearch-Commands {
+      @apply flex items-center space-x-3;
+
+      li {
+        @apply flex items-center;
+      }
+
+      .DocSearch-Commands-Key {
+        @apply mr-1 rounded-[20px] border-none bg-gray-new-94 px-[3px] py-px text-gray-new-50;
+      }
+
+      .DocSearch-Label {
+        @apply ml-1.5;
+      }
+    }
   }
 
   .DocSearch-Cancel {
@@ -87,23 +84,19 @@
   }
 
   .DocSearch-Form {
-    align-items: center;
-    border-radius: 4px;
-    box-shadow: inset 0 0 0 1px #333;
-    display: flex;
-    height: 40px;
-    margin: 0;
-    padding: 0 12px;
-    position: relative;
-    width: 100%;
+    @apply relative m-0 flex h-10 w-full items-center rounded py-0 pl-3 pr-2 shadow-none;
+  }
+
+  .DocSearch-MagnifierLabel {
+    @apply h-4 w-4 bg-[url('/images/search-light.svg')] bg-center bg-no-repeat dark:bg-[url('/images/search-dark.svg')];
+    .DocSearch-Search-Icon {
+      @apply hidden;
+    }
   }
 
   .DocSearch-MagnifierLabel,
   .DocSearch-Reset {
-    align-items: center;
-    color: #333;
-    display: flex;
-    justify-content: center;
+    @apply text-sm leading-none text-gray-new-60;
 
     svg {
       height: 24px;
@@ -117,18 +110,7 @@
   }
 
   .DocSearch-Input {
-    appearance: none;
-    background: transparent;
-    border: 0;
-    color: #333;
-    flex: 1;
-    font: inherit;
-    height: 100%;
-    outline: none;
-    padding: 0 0 0 8px;
-    width: 80%;
-    font-size: 16px;
-    font-weight: 400;
+    @apply h-full w-4/5 grow appearance-none border-none bg-transparent p-0 pl-2 text-base font-normal leading-none text-black-new outline-none;
 
     &::-webkit-search-decoration,
     &::-webkit-search-cancel-button,
@@ -139,90 +121,129 @@
   }
 
   .DocSearch-Reset {
+    @apply cursor-pointer appearance-none rounded-[50%] border-none bg-none;
     stroke-width: 1.4;
     animation: fade-in 0.1s ease-in forwards;
-    appearance: none;
-    background: none;
-    border: 0;
-    border-radius: 50%;
-    color: #333;
-    cursor: pointer;
-    padding: 2px;
   }
 
   .DocSearch-ErrorScreen,
   .DocSearch-NoResults,
   .DocSearch-StartScreen {
-    font-size: 0.9em;
-    margin: 0 auto;
-    padding: 36px 0;
-    text-align: center;
-    width: 80%;
+    @apply mx-auto my-0 w-4/5 px-0 py-12 text-center text-lg;
+  }
+
+  .DocSearch-Screen-Icon {
+    svg {
+      @apply mx-auto;
+    }
+  }
+
+  .DocSearch-NoResults-Prefill-List {
+    @apply mt-6;
   }
 
   .DocSearch-Help {
-    font-size: 0.9em;
-    margin: 0;
-    user-select: none;
-    color: #333;
+    @apply text-lg leading-none text-gray-new-70;
   }
 
   .DocSearch-Logo a {
-    display: flex;
-    text-decoration: none;
-  }
-
-  .DocSearch-Label {
-    position: relative;
-    font-size: 12px;
-    line-height: 1.6em;
-    color: #333;
+    @apply flex items-center;
   }
 
   .DocSearch-Logo svg {
     margin-left: 8px;
   }
 
-  .DocSearch-Commands {
-    color: #333;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-      align-items: center;
-      display: flex;
-    }
-
-    li:not(:last-of-type) {
-      margin-right: 0.8em;
-    }
-
-    .DocSearch-Commands-Key {
-      align-items: center;
-      display: flex;
-      height: 18px;
-      justify-content: center;
-      margin-right: 0.4em;
-      padding: 0 0 1px;
-      width: 20px;
-
-      background: #f5f5f5;
-      border: 1px solid #e6e6e6;
-      border-radius: 3px;
-      box-shadow: none;
-      color: #333;
-    }
-  }
-
   .DocSearch-Label {
-    color: #333;
-    font-size: 12px;
-    line-height: 1.6em;
+    @apply text-sm leading-none text-gray-new-60;
   }
 
-  .DocSearch-Hit {
-    padding: 0 1rem;
+  .DocSearch-Hits {
+    @apply p-5;
+
+    .DocSearch-Hit-source {
+      @apply text-sm font-semibold leading-none text-gray-new-30;
+    }
+
+    > ul {
+      @apply mt-2.5 space-y-2.5;
+    }
+
+    .DocSearch-Hit {
+      @apply border-none;
+
+      &[aria-selected='true'] {
+        a {
+          @apply bg-gray-new-98;
+
+          .DocSearch-Hit-action::after {
+            @apply opacity-100;
+          }
+        }
+      }
+
+      a {
+        @apply flex rounded border border-gray-new-94 px-3 py-4 transition-colors duration-200 hover:bg-gray-new-98;
+
+        &:hover {
+          .DocSearch-Hit-action::after {
+            @apply opacity-100;
+          }
+        }
+      }
+
+      .DocSearch-Hit-Container {
+        @apply flex w-full items-start space-x-3;
+
+        .DocSearch-Hit-content-wrapper {
+          @apply !mr-2 flex flex-col space-y-1.5;
+        }
+
+        .DocSearch-Hit-icon {
+          @apply !ml-0 mt-0.5 text-gray-new-70;
+
+          svg {
+            @apply h-4 w-4;
+          }
+        }
+
+        .DocSearch-Hit-Tree {
+          @apply mr-2 h-auto w-4 text-gray-new-70;
+        }
+
+        .DocSearch-Hit-title {
+          @apply text-sm font-medium leading-tight;
+
+          mark {
+            @apply bg-transparent text-secondary-8;
+          }
+        }
+
+        .DocSearch-Hit-path {
+          @apply text-xs leading-none text-black-new;
+
+          mark {
+            @apply bg-transparent text-secondary-8;
+          }
+        }
+
+        .DocSearch-Hit-action {
+          @apply relative !ml-auto mt-0.5 h-4 w-4;
+
+          &::after {
+            @apply absolute top-1/2 right-0 h-full w-full -translate-y-1/2 bg-secondary-8 opacity-0 transition-opacity duration-200 content-[''];
+            -webkit-mask-image: url('/images/chevron.svg');
+            mask-image: url('/images/chevron.svg');
+            mask-size: 6px 12px;
+            mask-repeat: no-repeat;
+            mask-position: center;
+          }
+
+          svg {
+            @apply hidden;
+          }
+        }
+      }
+    }
   }
 }
