--- a/src/styles/print-grid.css
+++ b/src/styles/print-grid.css
@@ -31,7 +31,7 @@
 
   &::before {
     content: '';
-    @apply absolute top-1/2 left-1/2 h-2 w-2 -translate-y-1/2 -translate-x-1/2 rounded-full bg-gray-1;
+    @apply absolute left-1/2 top-1/2 h-2 w-2 -translate-x-1/2 -translate-y-1/2 rounded-full bg-gray-1;
   }
 
   &.circle-with-text {
