--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,7 +14,7 @@
 
 @layer components {
   .label-secondary-2 {
-    @apply rounded-[40px] bg-secondary-2 py-2 px-4 text-xs font-bold uppercase leading-none text-black;
+    @apply rounded-[40px] bg-secondary-2 px-4 py-2 text-xs font-bold uppercase leading-none text-black;
   }
 
   .slider-track + span,
