fix: search on notfound page

--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,6 +1,6 @@
 .DocSearch-Button {
-  @apply flex max-w-full shrink-0 grow basis-[230px] items-center overflow-x-auto rounded border border-gray-new-90 bg-white bg-[url('/images/search-light.svg')] bg-[left_0.625rem_center] bg-no-repeat p-[7px] pl-9 text-left leading-none text-gray-new-70 outline-none transition-colors duration-200 hover:cursor-pointer hover:border-gray-new-70 hover:shadow-none dark:border-gray-new-30 dark:bg-black-new dark:bg-[url('/images/search-dark.svg')] dark:text-gray-new-50 dark:hover:border-gray-new-50 md:m-0;
-  @apply lg:mr-6 lg:h-5 lg:w-5 lg:items-start lg:border-none lg:bg-[top] lg:p-0;
+  @apply flex max-w-full shrink-0 grow basis-[230px] items-center overflow-x-auto rounded border border-gray-new-90 bg-white bg-[url('/images/search-light.svg')] bg-[left_0.625rem_center] bg-no-repeat p-[7px] pl-9 text-left leading-none text-gray-new-70 outline-none transition-colors duration-200 hover:cursor-pointer hover:border-gray-new-70 hover:shadow-none dark:border-gray-new-30 dark:bg-black-new dark:bg-[url('/images/search-dark.svg')] dark:text-gray-new-50 dark:hover:border-gray-new-50;
+  @apply lg:mr-6 lg:h-5 lg:w-5 lg:items-start lg:border-0 lg:bg-[top] lg:p-0 md:m-0;
 
   .DocSearch-Search-Icon {
     @apply hidden;
@@ -286,16 +286,26 @@
 
           .DocSearch-Hit-action-button {
             svg {
-              @apply h-4 w-4 transition-colors duration-200;
+              @apply h-4 w-4 text-gray-new-60 transition-colors duration-200 dark:text-gray-new-50;
             }
             &:hover {
               svg {
-                @apply text-secondary-8 dark:text-green-45;
+                @apply text-black-new dark:text-gray-new-80;
               }
             }
           }
         }
       }
     }
+  }
+}
+
+.DocSearch-notFound {
+  .DocSearch-Button {
+    @apply flex h-16 items-center rounded-[110px] border-2 bg-[length:20px_20px] bg-[left_1.5rem_center] px-6 pl-14 lg:border-2;
+  }
+
+  .DocSearch-Button-Placeholder {
+    @apply text-xl leading-none lg:block;
   }
 }
