fix: prevent scroll when search is open

--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,3 +1,7 @@
+.DocSearch--active {
+  @apply overflow-hidden;
+}
+
 .DocSearch-Button {
   @apply flex max-w-full shrink-0 grow basis-[230px] items-center overflow-x-auto rounded border border-gray-new-90 bg-white bg-[url('/images/search-light.svg')] bg-[left_0.625rem_center] bg-no-repeat p-[7px] pl-9 text-left leading-none text-gray-new-70 outline-none transition-colors duration-200 hover:cursor-pointer hover:border-gray-new-70 hover:shadow-none dark:border-gray-new-30 dark:bg-black-new dark:bg-[url('/images/search-dark.svg')] dark:text-gray-new-50 dark:hover:border-gray-new-50;
   @apply lg:mr-6 lg:h-5 lg:w-5 lg:items-start lg:border-0 lg:bg-[top] lg:p-0 md:m-0;
