--- a/src/styles/remove-autocomplete-styles.css
+++ b/src/styles/remove-autocomplete-styles.css
@@ -16,4 +16,14 @@
       transition: background-color 600000s 0s, color 600000s 0s;
     }
   }
+
+  .remove-autocomplete-styles-apply-form {
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus {
+      box-shadow: 0 0 0 1000px rgba(255, 255, 255, 0.04) inset;
+      border: 1px solid rgba(255, 255, 255, 0.04);
+      transition: background-color 600000s 0s, color 600000s 0s;
+    }
+  }
 }
