--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -70,3 +70,8 @@
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-position: center center;
 }
+
+.logos {
+  mask-image: linear-gradient(90deg, transparent, #d9d9d9 12%, #d9d9d9 88%, transparent);
+  -webkit-mask-image: linear-gradient(90deg, transparent, #d9d9d9 12%, #d9d9d9 88%, transparent);
+}
